Add new changes

--- a/views/home.html
+++ b/views/home.html
@@ -4,12 +4,15 @@
 		Jam Me As A Service
 	</p></td>
 	<div class="text-center center-block" id="mic">
-		<a href="" onclick="start()"> <i  class="fa fa-microphone fa-3x"> </i> </a>
+		<a href="" ng-click="start();cgColor = !cgColor"> <i  class="fa fa-microphone fa-3x"
+		ng-class="{'text-primary' : !cgColor, 'text-danger': cgColor}"> </i> </a>
 	</div>
 
 </div>
 
 <div class="center-block col-xs-12">
 	<br />
-	<textarea id="output" class=" center-block" style="width: 70%"> </textarea>
+	<form class="form-group">
+		<textarea id="output" class=" center-block" style="width: 70%"> </textarea>
+	</form>
 </div>
