Change from wav to mic

--- a/views/home.html
+++ b/views/home.html
@@ -2,7 +2,7 @@
 	<h1>JAMAAS</h1>
 	<p>
 		Jam Me As A Service
-	</p></td>
+	</p>
 	<div class="text-center center-block" id="mic">
 		<a href="" ng-click="start();cgColor = !cgColor"> <i  class="fa fa-microphone fa-3x"
 		ng-class="{'text-primary' : !cgColor, 'text-danger': cgColor}"> </i> </a>
@@ -13,6 +13,6 @@
 <div class="center-block col-xs-12">
 	<br />
 	<form class="form-group">
-		<textarea id="output" class=" center-block" style="width: 70%"> </textarea>
+		<textarea id="output" class="form-control center-block" style="width: 70%"> </textarea>
 	</form>
 </div>
