--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 text-center">
-	<h1>JAMAAS</h1>
+	<h1>JASS</h1>
 	<p>
-		Jam Me As A Service
+		Jam As A Service
 	</p>
 	<div class="text-center center-block" id="mic">
 		<a href="" ng-click="start();cgColor = !cgColor"> <i  class="fa fa-microphone fa-3x"
