Edit mic position

--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 
 </div>
 
-<div class="center-block col-xs-12" ng-show="options.showText" style="padding-top: 200px;">
+<div class="center-block col-xs-12" ng-show="options.showText" style="margin-top: 200px;">
 	<form class="form-group">
 		<textarea id="output" class="form-control center-block" style="width: 70%"> </textarea>
 	</form>
